--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,7 @@
-Home Page
+{% extends '_base.html' %}
+{% block page_title %}
+HOME PAGE
+{% endblock %}
+{% block content %}
+<h1>HOME PAGE</h1>
+{% endblock %}
