--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,5 +1,8 @@
 {% extends '_base.html' %}
 {% load static %}
+{% load i18n %}
+{% load comment_tags %}
+{% load crispy_forms_tags %}
 {% block content %}
     <div class="wrapper">
         <div class="breadcrumb-area bg-color ptb--90" data-bg-color="#f6f6f6">
@@ -45,7 +48,7 @@
                                     </div>
                                     <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
                                             onclick="window.location.href='cart.html'">
-                                        اضافه به سبد خرید
+                                        {% trans 'Add To Card' %}
                                     </button>
                                 </div>
                                 <div class="product-footer-meta mt-5 pt-5">
@@ -65,7 +68,7 @@
                                 <div class="nav nav-tabs product-data-tab__head" id="product-tab" role="tablist">
                                     <a class="m-0 product-data-tab__link nav-link active" id="nav-description-tab"
                                        data-toggle="tab" href="#nav-description" role="tab" aria-selected="true">
-                                        <span>توضیحات محصول</span>
+                                        <span>{% trans 'Product Description' %}</span>
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-info-tab" data-toggle="tab"
                                        href="#nav-info" role="tab" aria-selected="true">
@@ -73,7 +76,7 @@
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab"
                                        data-toggle="tab" href="#nav-reviews" role="tab" aria-selected="true">
-                                        <span>نظرات (۱)</span>
+                                        <span>نظرات ({{ product.comments.all|only_active_comments|length }})</span>
                                     </a>
                                 </div>
                                 <div class="tab-content product-data-tab__content" id="product-tabContent">
@@ -111,9 +114,9 @@
                                         <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
                                              aria-labelledby="nav-reviews-tab">
                                             <div class="product-reviews">
-                                                <h3 class="review__title">۱ نظر برای {{ product.title }}</h3>
+                                                <h3 class="review__title">{{product.comments.all|only_active_comments|length}} نظر برای {{ product.title }}</h3>
                                                 <ul class="review__list">
-                                                    {% for comment in product.comments.all %}
+                                                    {% for comment in product.comments.all|only_active_comments %}
                                                         <li class="review__item">
                                                             <div class="review__container">
                                                                 <div class="review__text">
@@ -150,37 +153,10 @@
                                                         <div class="col-lg-8 m-auto">
                                                             <span class="reply-title pull-right">نظر خود را بنویسید</span>
                                                             <br>
-                                                            <form action="#" class="form text-right">
-                                                                <div class="form-notes mb--20">
-                                                                    <p class="my-3"><span class="required">*</span>ایمیل
-                                                                        شما برای دیگران نشان داده نمیشود.</p>
-                                                                </div>
-                                                                <div class="form__group mb--10">
-                                                                    <label class="form__label d-block" for="email">متن
-                                                                        نظر شما<span class="required">*</span></label>
-                                                                    <textarea name="review" id="review"
-                                                                              class="form__input form__input--textarea"></textarea>
-                                                                </div>
-                                                                <div class="form__group mb--20">
-                                                                    <label class="form__label d-block" for="name">نام
-                                                                        شما<span class="required">*</span></label>
-                                                                    <input type="text" name="name" id="name"
-                                                                           class="form__input">
-                                                                </div>
-                                                                <div class="form__group mb--20">
-                                                                    <label class="form__label d-block" for="email">ایمیل
-                                                                        شما<span class="required">*</span></label>
-                                                                    <input type="email" name="email" id="email"
-                                                                           class="form__input">
-                                                                </div>
-                                                                <div class="form__group">
-                                                                    <div class="form-row">
-                                                                        <div class="col-12">
-                                                                            <input type="submit" value="ارسال"
-                                                                                   class="btn-submit">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
+                                                            <form action="{% url 'comment_create' product.id %}" method="POST">
+                                                                {% csrf_token %}
+                                                                {{ comment_form|crispy }}
+                                                                <input type="submit" value="{% trans 'Submit' %} ">
                                                             </form>
                                                         </div>
                                                     </div>
