--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -4,69 +4,89 @@
 {% load comment_tags %}
 {% load crispy_forms_tags %}
 {% block content %}
+    {% translate 'Card' as header_name %}
+    {% include 'topheader.html' with header_name=header_name %}
     <div class="main-content-wrapper">
         <div class="page-content-inner ptb--80">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mb-md--50">
-                        <form class="cart-form" action="#">
-                            <div class="row no-gutters">
-                                <div class="col-12">
+
+                        <div class="row no-gutters">
+                            <div class="col-12">
+                                {% if cart %}
                                     <div class="table-content table-responsive">
                                         <table class="table text-center">
                                             <thead>
                                             <tr>
                                                 <th>&nbsp;</th>
                                                 <th>عکس محصول</th>
-                                                <th class="text-left">نام محصول</th>
+                                                <th>نام محصول</th>
                                                 <th>قیمت</th>
                                                 <th>مقدار</th>
                                                 <th>مجموع</th>
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            {% for product in cart %}
-                                            <tr>
-                                                <td class="product-remove text-left"><a href=""><i
-                                                        class="flaticon flaticon-cross"></i></a></td>
-                                                <td class="product-thumbnail text-left">
-                                                    <img src="assets/img/products/prod-10-70x88.jpg"
-                                                         alt="Product Thumnail">
-                                                </td>
-                                                <td class="product-name wide-column">
-                                                    <h3>
-                                                        <a href="product-details.html">{{ item.product_obj.title }}</a>
-                                                    </h3>
-                                                </td>
-                                                <td class="product-price">
+                                            {% for item in cart %}
+                                                <tr>
+                                                    <td class="product-remove text-left">
+                                                        <a href="{% url 'cart:cart_remove' item.product_obj.id %}"><i
+                                                                class="flaticon flaticon-cross"></i>
+                                                        </a>
+                                                    </td>
+                                                    <td class="product-thumbnail text-left">
+                                                        <img src="assets/img/products/prod-10-70x88.jpg"
+                                                             alt="Product Thumnail">
+                                                    </td>
+                                                    <td class="product-name ">
+                                                        <h3>
+                                                            <a href="{{ item.product_obj.get_absolute_url }}">{{ item.product_obj.title }}</a>
+                                                        </h3>
+                                                    </td>
+                                                    <td class="product-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">۱۴۸,۰۰۰ تومان</span>
+                                                                <span class="money">{{ item.product_obj.price }}</span>
                                                             </span>
-                                                </td>
-                                                <td class="product-quantity">
-                                                    <div class="quantity">
-                                                        <input type="number" class="quantity-input" name="qty"
-                                                               id="qty-1" value="2" min="1">
-                                                    </div>
-                                                </td>
-                                                <td class="product-total-price">
+                                                    </td>
+                                                    <td class="product-quantity">
+                                                        <form class="d-flex" method="post"
+                                                              action="{% url 'cart:cart_add' item.product_obj.id %}">
+                                                            {% csrf_token %}
+                                                            <div class="quantity">
+                                                                <input type="number"
+                                                                       class="quantity-input" name="quantity"
+                                                                       id="qty-1"
+                                                                       value="{{ item.quantity }}"
+                                                                       min="1">
+                                                            </div>
+                                                            {{ item.product_update_quantity_form.inplace }}
+                                                            <button class="small" type="submit"><i
+                                                                    class="fa fa-refresh"></i></button>
+                                                        </form>
+                                                    </td>
+                                                    <td class="product-total-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">۲۹۶,۰۰۰ تومان</span>
+                                                                <span class="money">{{ item.total_price }}</span>
                                                             </span>
-                                                </td>
-                                            </tr>
+                                                    </td>
+                                                </tr>
                                             {% endfor %}
                                             </tbody>
                                         </table>
                                     </div>
-                                </div>
+                                {% else %}
+                                    <p>{% trans 'Cart is Empty! Please add Some Products to The Cart' %}</p>
+                                    <a href="{% url 'product_list' %}">{% trans 'Go Shoping' %}</a>
+                                {% endif %}
                             </div>
-                            <div class="row no-gutters border-top pt--20 mt--20">
-                                <div class="col-sm-6 text-sm-right">
-                                    <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
-                                </div>
+                        </div>
+                        <div class="row no-gutters border-top pt--20 mt--20">
+                            <div class="col-sm-6 text-sm-right">
+                                <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
                             </div>
-                        </form>
+                        </div>
+
                     </div>
                     <div class="col-lg-4">
                         <div class="cart-collaterals">
@@ -78,7 +98,7 @@
                                             <span>مجموع</span>
                                         </div>
                                         <div class="cart-calculator__item--value">
-                                            <span>۳۴۶,۰۰۰ تومان</span>
+                                            <span></span>
                                         </div>
                                     </div>
                                     <div class="cart-calculator__item order-total">
@@ -87,7 +107,7 @@
                                         </div>
                                         <div class="cart-calculator__item--value">
                                                 <span class="product-price-wrapper">
-                                                    <span class="money">۳۴۶,۰۰۰ تومان</span>
+                                                    <span class="money">{{ cart.get_total_price }} تومان</span>
                                                 </span>
                                         </div>
                                     </div>
