--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -31,7 +31,9 @@
                                                 <div class="product-inner">
                                                     <figure class="product-image">
                                                         <a href="{{ product.get_absolute_url }}">
-                                                            <img src="https://dkstatics-public.digikala.com/digikala-products/15d774761e234a15c1c559ac540963baad9e229f_1631704695.jpg?x-oss-process=image/resize,m_lfit,h_800,w_800/quality,q_90" alt="Products">
+                                                            {% if product.image %}
+                                                            <img  src="{{ product.image.url }}" alt="Products">
+                                                            {% endif %}
                                                         </a>
                                                         <div class="ShoppingYar-product-action">
                                                             <div class="product-action d-flex">
@@ -47,7 +49,7 @@
                                                             <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
                                                         </h3>
                                                         <div class="product-price-wrapper mb--30">
-                                                            <span class="money">{{ product.price }}تومان</span>
+                                                            <span class="money">{{ product.price }} تومان</span>
                                                         </div>
                                                         <a href="cart.html" class="btn btn-small btn-bg-sand btn-color-dark px-3">اضافه کردن به سبد خرید</a>
                                                     </div>
