Add Persian Number

--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -3,6 +3,9 @@
 {% load i18n %}
 {% load comment_tags %}
 {% load crispy_forms_tags %}
+{% load jalali_tags %}
+{% load persian_translation_tags %}
+{% load humanize %}
 {% block content %}
     {% translate 'Card' as header_name %}
     {% include 'topheader.html' with header_name=header_name %}
@@ -46,7 +49,7 @@
                                                     </td>
                                                     <td class="product-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{{ item.product_obj.price }}</span>
+                                                                <span class="money">{{ item.product_obj.price|intcomma:False|translate_number }} {% translate '$' %}</span>
                                                             </span>
                                                     </td>
                                                     <td class="product-quantity">
@@ -67,7 +70,7 @@
                                                     </td>
                                                     <td class="product-total-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{{ item.total_price }}</span>
+                                                                <span class="money">{{ item.total_price|intcomma:False|translate_number }} {% translate '$' %}</span>
                                                             </span>
                                                     </td>
                                                 </tr>
@@ -93,21 +96,14 @@
                             <div class="cart-totals">
                                 <h5 class="font-size-14 font-bold mb--15">مجموع</h5>
                                 <div class="cart-calculator">
-                                    <div class="cart-calculator__item">
-                                        <div class="cart-calculator__item--head">
-                                            <span>مجموع</span>
-                                        </div>
-                                        <div class="cart-calculator__item--value">
-                                            <span></span>
-                                        </div>
-                                    </div>
+                                    
                                     <div class="cart-calculator__item order-total">
                                         <div class="cart-calculator__item--head">
                                             <span>جمع کل</span>
                                         </div>
                                         <div class="cart-calculator__item--value">
                                                 <span class="product-price-wrapper">
-                                                    <span class="money">{{ cart.get_total_price }} تومان</span>
+                                                    <span class="money">{{ cart.get_total_price|intcomma:False|translate_number }} {% translate '$' %}</span>
                                                 </span>
                                         </div>
                                     </div>
