--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -4,6 +4,9 @@
 {% load i18n %}
 {% load comment_tags %}
 {% load crispy_forms_tags %}
+{% load jalali_tags %}
+{% load persian_translation_tags %}
+{% load humanize %}
 {% block content %}
     <div class="wrapper">
         {% include 'topheader.html' with header_name=product.title %}
@@ -27,7 +30,7 @@
                                     {{ product.description }}
                                 </p>
                                 <div class="my-5 py-5 product-price-wrapper mb--25">
-                                    <span class="money text-success">{{ product.price }}تومان </span>
+                                    <span class="money text-success">{{ product.price|intcomma:False|translate_number }} تومان</span>
                                     <span class="price-separator">-</span>
                                     <span class="money old-price text-danger">۲۱۰,۰۰۰ تومان</span>
                                 </div>
@@ -121,8 +124,8 @@
                                                                              alt="Review Avatar"
                                                                              class="review__avatar pd-3">
                                                                         <div>
-                                                                            <div class="review__meta">
-                                                                                <span class="review__published-date">{{ comment.datetime_created }}</span>
+                                                                            <div class="review__meta" dir="ltr">
+                                                                                <span class="review__published-date">{{ comment.datetime_created|to_jalali:'%Y %B %d '|translate_number }}</span>
                                                                                 <span class="review__dash">-</span>
                                                                                 <strong class="review__author px-4">{{ comment.author.username }}</strong>
                                                                             </div>
