--- a/templates/_base.html
+++ b/templates/_base.html
@@ -124,6 +124,7 @@
 {% block content %}
 
 {% endblock %}
+{% include 'footer.html' %}
 <script src="{% static 'js/vendor.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
 </body>
