--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -39,8 +39,7 @@
                                                         </a>
                                                     </td>
                                                     <td class="product-thumbnail text-left">
-                                                        <img src="assets/img/products/prod-10-70x88.jpg"
-                                                             alt="Product Thumnail">
+                                                        <img src="{{ item.product_obj.image.url }}">
                                                     </td>
                                                     <td class="product-name ">
                                                         <h3>
@@ -84,19 +83,23 @@
                                 {% endif %}
                             </div>
                         </div>
-                        <div class="row no-gutters border-top pt--20 mt--20">
-                            <div class="col-sm-6 text-sm-right">
-                                <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
+                        {% if not cart.is_empty %}
+                            <div class="row no-gutters border-top pt--20 mt--20">
+                                <div class="col-sm-6 text-sm-right">
+                                    <form method="POST" action="{% url 'cart:cart_clear' %}">
+                                        {% csrf_token %}
+                                        <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
+                                    </form>
+                                </div>
                             </div>
-                        </div>
-
+                        {% endif %}
                     </div>
                     <div class="col-lg-4">
                         <div class="cart-collaterals">
                             <div class="cart-totals">
                                 <h5 class="font-size-14 font-bold mb--15">مجموع</h5>
                                 <div class="cart-calculator">
-                                    
+
                                     <div class="cart-calculator__item order-total">
                                         <div class="cart-calculator__item--head">
                                             <span>جمع کل</span>
@@ -109,7 +112,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="checkout.html" class="btn btn-fullwidth btn-bg-red btn-color-white btn-hover-2">
+                            <a href="{% url 'order_create' %}" class="btn btn-fullwidth btn-bg-red btn-color-white btn-hover-2">
                                 ثبت سفارش
                             </a>
                         </div>
