--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,8 +1,9 @@
 {% extends '_base.html' %}
+{% load i18n %}
 
 {% block content %}
     <div class="wrapper">
-        <div  class="main-content-wrapper container-fluid">
+        <div class="main-content-wrapper container-fluid">
             <div class="shop-page-wrapper shop-fullwidth">
                 <div class="container">
                     <div class="row mb--50">
@@ -26,36 +27,48 @@
                                 <div class="tab-pane fade show active" id="nav-all">
                                     <div class="row xxl-block-grid-6 grid-space-20">
                                         {% for product in products %}
-                                          <div class="col-xl-3 col-md-4 col-sm-6 mb--50">
-                                            <div class="ShoppingYar-product">
-                                                <div class="product-inner">
-                                                    <figure class="product-image">
-                                                        <a href="{{ product.get_absolute_url }}">
-                                                            {% if product.image %}
-                                                            <img  src="{{ product.image.url }}" alt="Products">
-                                                            {% endif %}
-                                                        </a>
-                                                        <div class="ShoppingYar-product-action">
-                                                            <div class="product-action d-flex">
-                                                                <a href="wishlist.html" class="action-btn">
-                                                                    <i class="flaticon flaticon-like"></i>
-                                                                </a>
+                                            <div class="col-xl-3 col-md-4 col-sm-6 mb--50">
+                                                <div class="ShoppingYar-product">
+                                                    <div class="product-inner">
+                                                        <figure class="product-image">
+                                                            <a href="{{ product.get_absolute_url }}">
+                                                                {% if product.image %}
+                                                                    <img src="{{ product.image.url }}" alt="Products">
+                                                                {% endif %}
+                                                            </a>
+                                                            <div class="ShoppingYar-product-action">
+                                                                <div class="product-action d-flex">
+                                                                    <a href="wishlist.html" class="action-btn">
+                                                                        <i class="flaticon flaticon-like"></i>
+                                                                    </a>
+                                                                </div>
                                                             </div>
+                                                            <span class="product-badge">تخفیف ویژه</span>
+                                                        </figure>
+                                                        <div class="product-info">
+                                                            <h3 class="product-title mb--15">
+                                                                <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                                                            </h3>
+                                                            <div class="product-price-wrapper mb--30">
+                                                                <span class="money">{{ product.price }} تومان</span>
+                                                            </div>
+                                                            <form action="{% url 'cart:cart_add' product.id %}"
+                                                                  method="post">
+                                                                {% csrf_token %}
+                                                                <div class="quantity-wrapper">
+                                                                    <input type="hidden" class="quantity-input"
+                                                                           name="quantity" id="qty"
+                                                                           value="1" min="1" max="30">
+                                                                    <button type="submit"
+                                                                            class="btn btn-small btn-bg-red btn-color-white btn-hover-2">
+                                                                        {% trans 'Add To Card' %}
+                                                                    </button>
+                                                                </div>
+                                                            </form>
                                                         </div>
-                                                        <span class="product-badge">تخفیف ویژه</span>
-                                                    </figure>
-                                                   <div class="product-info">
-                                                        <h3 class="product-title mb--15">
-                                                            <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
-                                                        </h3>
-                                                        <div class="product-price-wrapper mb--30">
-                                                            <span class="money">{{ product.price }} تومان</span>
-                                                        </div>
-                                                        <a href="cart.html" class="btn btn-small btn-bg-sand btn-color-dark px-3">اضافه کردن به سبد خرید</a>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
                                         {% endfor %}
 
                                     </div>
@@ -63,11 +76,13 @@
                             </div>
                             <nav class="pagination-wrap mt--35 mt-md--25 pb-5">
                                 <ul class="pagination">
-                                    <li><a href="#" class="next page-number"><i class="fa fa-angle-double-right"></i></a></li>
+                                    <li><a href="#" class="next page-number"><i
+                                            class="fa fa-angle-double-right"></i></a></li>
                                     <li><span class="current page-number">1</span></li>
                                     <li><a href="#" class="page-number">2</a></li>
                                     <li><a href="#" class="page-number">3</a></li>
-                                    <li><a href="#" class="prev page-number"><i class="fa fa-angle-double-left"></i></a></li>
+                                    <li><a href="#" class="prev page-number"><i class="fa fa-angle-double-left"></i></a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
@@ -77,33 +92,6 @@
         </div>
         <!-- Main Content Wrapper Start -->
 
-        <!-- Footer Start-->
-        <footer class="footer">
-            <div class="footer-top bg-color ptb--50" data-bg-color="#f6f6f6">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-9 text-center">
-                            <div class="footer-widget mb--50">
-                                <div class="textwidget">
-                                    <img src="assets/img/codingyar_logo.png" alt="Logo">
-                                </div>
-                            </div>
-                            <div class="footer-widget mb--50 pb--1">
-                                <ul class="footer-menu">
-                                    <li><a href="">درباره ما</a></li>
-                                    <li><a href="">قوانین و مقررات</a></li>
-                                    <li><a href="">تماس با ما</a></li>
-                                </ul>
-                            </div>
-                            <div class="footer-widget">
-                                Codingyar.com © | all rights reserved
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Footer End-->
 
         <!-- Search form Popup Start -->
         <div class="searchform__popup" id="searchForm">
@@ -111,8 +99,10 @@
             <div class="searchform__body">
                 <p>در باکس زیر عبارت خود را وارد کنید</p>
                 <form class="searchform">
-                    <input type="text" name="popup-search" id="popup-search" class="searchform__input" placeholder="جستجو در بین محصولات...">
-                    <button type="submit" class="searchform__submit"><i class="flaticon flaticon-magnifying-glass-icon"></i></button>
+                    <input type="text" name="popup-search" id="popup-search" class="searchform__input"
+                           placeholder="جستجو در بین محصولات...">
+                    <button type="submit" class="searchform__submit"><i
+                            class="flaticon flaticon-magnifying-glass-icon"></i></button>
                 </form>
             </div>
         </div>
